# GeoLinear

./: .gitignore  CMakeLists.txt  README.md  amplifying_latent_signal_with_hvrt.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: benchmark_pyramid_hart.py  benchmark_subtree.py  benchmark_vs_xgb.py  benchmark_vs_xgb_nmae.py
cpp/hvrt/include/hvrt/: hvrt.h  target.h  tree.h  types.h  whitener.h
cpp/hvrt/src/: hvrt.cpp  target.cpp  tree.cpp  whitener.cpp
cpp/include/geolinear/: geolinear_regressor.h  types.h
cpp/python/: bindings.cpp
cpp/src/: geolinear_regressor.cpp
examples/: complex_portfolio_demo.py  insurance_pricing_demo.py
src/geolinear/: __init__.py  _cpp_backend.py  augment.py  regressor.py
tests/: test_geolinear.py
